[tool.poetry]
name = "atlas-of-information-management-etl"
description = "atlas-of-information-management-etl"
version = "0.0.0"
license = "GPL-3.0-or-later"
authors = [
    "Paula Courville",
    "Darrel Drake",
    "Dee Anna Hillebrand",
    "Scott Manley",
    "Madeline Matz",
    "Christopher Pickering <cpickering@rhc.net>",
    "Dan Ryan",
    "Richard Schissler",
    "Eric Shultz"
]
packages = [{ include = "LDAP" }]

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.6.5"

[tool.black]
max_line_length = 99
include ='atlas'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data

      # atlas
      | migrations
      | Data_Governance_ETL
      | Data_Governance_WebApp
    )/
    '''
quiet = true


[tool.isort]
profile = "black"
quiet = true
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.poetry.extras]
docs = ["Sphinx", "Pygments", "furo", "sphinx-copybutton", "sphinx-inline-tabs"]

[tool.poetry.dev-dependencies]
Sphinx = { version = "^3.5.2", optional = true }
Pygments = { version = "^2.8.1", optional = true }
furo = { version = "^2021.2.28-beta.28", optional = true }
sphinx-copybutton = { version = "^0.3.1", optional = true }
sphinx-inline-tabs = { version = "^2020.10.19-beta.4", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"